// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute reth endpoint returns rETH/ETH exchange rate as a hex string 1`] = `
{
  "data": {
    "result": "0x0000000000000000000000000000000000000000000000000e6ed27d66680000",
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": "0x0000000000000000000000000000000000000000000000000e6ed27d66680000",
  "statusCode": 200,
}
`;

exports[`execute reth endpoint returns rETH/USD price when "quote: USD" is passed as an input param 1`] = `
{
  "data": {
    "result": 1341.6,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 1341.6,
  "statusCode": 200,
}
`;
